- Presskit: reordered product presskit sections - Fixed white spaced on product pages - Fixed newlines between product description lines

--- a/css/custom.css
+++ b/css/custom.css
@@ -123,7 +123,7 @@ blockquote:before {}
 }
 
 .twitter-tweet.twitter-tweet-rendered {
-    padding: 0 10px;
+    padding: 0 8px;
 }
 
 .navbar-menu {
